--- a/shop.html
+++ b/shop.html
@@ -17,6 +17,7 @@
     <nav style="background-color: #555; display: flex; justify-content: center; margin-bottom: 20px;">
         <a href="index.html" style="color: white; padding: 14px 20px; text-decoration: none; text-align: center;">Home</a>
         <a href="shop.html" style="color: white; padding: 14px 20px; text-decoration: none; text-align: center;">Shop</a>
+        <a href="jewelry.html" style="color: white; padding: 14px 20px; text-decoration: none; text-align: center;">Jewelry</a>
         <a href="about.html" style="color: white; padding: 14px 20px; text-decoration: none; text-align: center;">About</a>
         <a href="contact.html" style="color: white; padding: 14px 20px; text-decoration: none; text-align: center;">Contact</a>
         <a href="payment.html" style="color: white; padding: 14px 20px; text-decoration: none; text-align: center;">Payment</a>
