--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <!-- Navigation Menu -->
     <nav style="background-color: #555; display: flex; justify-content: center; margin-bottom: 20px;">
         <a href="home.html" style="color: white; padding: 14px 20px; text-decoration: none; text-align: center;">Home</a>
+        <a href="jewelry.html" style="color: white; padding: 14px 20px; text-decoration: none; text-align: center;">Jewelry</a>
         <a href="shop.html" style="color: white; padding: 14px 20px; text-decoration: none; text-align: center;">Shop</a>
         <a href="categories.html" style="color: white; padding: 14px 20px; text-decoration: none; text-align: center;">Categories</a>
         <a href="about.html" style="color: white; padding: 14px 20px; text-decoration: none; text-align: center;">About</a>
