--- a/categories.html
+++ b/categories.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Categories - Jewelry Shop</title>
+  <title>Pricelist - Jewelry Shop</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,10 +23,10 @@
     <h1>Jewelry Categories</h1>
     <div class="categories">
       <ul>
-        <li><a href="#">Necklaces</a></li>
-        <li><a href="#">Earrings</a></li>
-        <li><a href="#">Bracelets</a></li>
-        <li><a href="#">Rings</a></li>
+        <li><a href="#">Necklaces</a> - Rp 150.000 - Rp 1.500.000</li>
+        <li><a href="#">Earrings</a> - Rp 100.000 - Rp 1.000.000</li>
+        <li><a href="#">Bracelets</a> - Rp 120.000 - Rp 1.200.000</li>
+        <li><a href="#">Rings</a> - Rp 180.000 - Rp 1.800.000</li>
       </ul>
     </div>
 
