--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <!-- Footer Section -->
     <footer style="background-color: #333; color: white; text-align: center; padding: 20px; position: relative; bottom: 0; width: 100%;">
-        <p>&copy; 2025 Elegant Jewelry Shop. All Rights Reserved.</p>
+        <p>&copy; 2025 Radiant Aura Jewelry Shop. All Rights Reserved.</p>
     </footer>
 
 </body>
