--- a/jewelry.html
+++ b/jewelry.html
@@ -17,7 +17,7 @@
                     <li><a href="categories.html">Categories</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="payment.html">Contact</a></li>
+                    <li><a href="payment.html">Payment</a></li>
                 </ul>
             </nav>
         </div>
@@ -29,6 +29,18 @@
             <p>Discover our exquisite jewelry collection.</p>
         </div>
     </section>
+
+    <div class="dropdown">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+          Jewelry Types
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="categories.html">Necklaces</a></li>
+          <li><a class="dropdown-item" href="categories.html">Earrings</a></li>
+          <li><a class="dropdown-item" href="categories.html">Rings</a></li>
+          <li><a class="dropdown-item" href="categories.html">Bracelets</a></li>
+        </ul>
+      </div>      
 
     <section id="categories" class="categories">
         <div class="container">
