--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jewelry Shop</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -95,7 +96,49 @@
       </ul>
     </nav>
   </header>
-  
+
+ <!-- Bootstrap CSS -->
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+
+  <!-- Carousel -->
+  <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+  <!-- Indicators/dots -->
+<div class="carousel-indicators">
+  <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+  <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+  <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+</div>
+
+<!-- The slideshow/carousel -->
+<div class="carousel-inner">
+  <div class="carousel-item active">
+    <img src="ring2.jpeg" alt="Rings" class="d-block w-50 mx-auto">
+  </div>
+  <div class="carousel-item">
+    <img src="starnecklace.jpeg" alt="Necklace" class="d-block w-50 mx-auto">
+  </div>
+  <div class="carousel-item">
+    <img src="starbracelet.jpeg" alt="Bracelet" class="d-block w-50 mx-auto">
+  </div>
+</div>
+
+    <!-- Left and right controls/icons -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+
+  <!-- Bootstrap JS and Popper.js -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+</body>
+</html>
   <main>
     <h1>Welcome to Our Jewelry Shop</h1>
     <p>Explore our exquisite collection of jewelry pieces, designed to make you shine.</p>
@@ -103,7 +146,7 @@
   </main>
   
   <footer>
-    <p>&copy; 2025 Jewelry Shop</p>
+    <p>&copy; 2025 Radiant Aura Jewelry Shop</p>
   </footer>
 
   <script src="script.js"></script>
